--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,27 +18,31 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      # Frontend/Firebase
-      - REACT_APP_FIREBASE_API_KEY
-      - REACT_APP_FIREBASE_AUTH_DOMAIN
-      - REACT_APP_FIREBASE_PROJECT_ID
-      - REACT_APP_FIREBASE_STORAGE_BUCKET
-      - REACT_APP_FIREBASE_MESSAGING_SENDER_ID
-      - REACT_APP_FIREBASE_APP_ID
-      - REACT_APP_STRIPE_API_KEY
-      - REACT_APP_POST_HOG_API_KEY
+      # Frontend environment variables (from .env)
+      - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
+      - REACT_APP_FIREBASE_AUTH_DOMAIN=${REACT_APP_FIREBASE_AUTH_DOMAIN}
+      - REACT_APP_FIREBASE_PROJECT_ID=${REACT_APP_FIREBASE_PROJECT_ID}
+      - REACT_APP_FIREBASE_STORAGE_BUCKET=${REACT_APP_FIREBASE_STORAGE_BUCKET}
+      - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${REACT_APP_FIREBASE_MESSAGING_SENDER_ID}
+      - REACT_APP_FIREBASE_APP_ID=${REACT_APP_FIREBASE_APP_ID}
+      - REACT_APP_STRIPE_API_KEY=${REACT_APP_STRIPE_API_KEY}
+      - REACT_APP_STRIPE_SECRET=${REACT_APP_STRIPE_SECRET}
+      - REACT_APP_STRIPE_ENDPOINT_SECRET=${REACT_APP_STRIPE_ENDPOINT_SECRET}
+      - REACT_APP_POST_HOG_API_KEY=${REACT_APP_POST_HOG_API_KEY}
       # Backend Firebase Admin
-      - FIREBASE_PROJECT_ID
-      - FIREBASE_PRIVATE_KEY
-      - FIREBASE_CLIENT_EMAIL
-      - FIREBASE_PRIVATE_KEY_ID
-      - FIREBASE_CLIENT_ID
-      - FIREBASE_CLIENT_CERT_URL
-      - FIREBASE_AUTH_URI
-      - FIREBASE_TOKEN_URI
-      - FIREBASE_AUTH_PROVIDER_CERT_URL
+      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+      - FIREBASE_PRIVATE_KEY=${FIREBASE_PRIVATE_KEY}
+      - FIREBASE_CLIENT_EMAIL=${FIREBASE_CLIENT_EMAIL}
+      - FIREBASE_PRIVATE_KEY_ID=${FIREBASE_PRIVATE_KEY_ID}
+      - FIREBASE_CLIENT_ID=${FIREBASE_CLIENT_ID}
+      - FIREBASE_CLIENT_CERT_URL=${FIREBASE_CLIENT_CERT_URL}
+      - FIREBASE_AUTH_URI=${FIREBASE_AUTH_URI:-https://accounts.google.com/o/oauth2/auth}
+      - FIREBASE_TOKEN_URI=${FIREBASE_TOKEN_URI:-https://oauth2.googleapis.com/token}
+      - FIREBASE_AUTH_PROVIDER_CERT_URL=${FIREBASE_AUTH_PROVIDER_CERT_URL:-https://www.googleapis.com/oauth2/v1/certs}
     volumes:
-      - ./api/config:/app/api/config:ro
+      # Mount credentials.json if it exists, otherwise use the empty file from the image
+      - ./api/config/credentials.json:/app/api/config/credentials.json:ro
+      # Prevent overriding node_modules with host's directory
       - /app/node_modules
     networks:
       - syntextai_network
